fixing alignment of title

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -320,6 +320,7 @@ Full-Width Styles
 
 #header_wrap .inner {
   padding: 50px 10px 30px 208px;
+  max-width: 77%;
 }
 
 #project_title {
